# vec_audit

./: README.md  pyproject.toml
tests/: test_parser_and_engine.py
tests/fixtures/c_sources/: example.c
vec_audit/: asm_extractor.py  benchmark.py  cli.py  compiler_compare.py  flag_advisor.py  history.py  models.py  project_audit.py
vec_audit/diagnostics/: engine.py
vec_audit/parsers/: clang.py  gcc.py
vec_audit/reporters/: html.py  json_reporter.py  terminal.py
