[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name        = "vec-audit"
version     = "0.1.0"
description = "Audit de vectorisation GCC/Clang avec suggestions d'optimisation"
readme      = "README.md"
requires-python = ">=3.11"
license     = { text = "MIT" }

dependencies = [
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vec-audit = "vec_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vec_audit*"]
